# nostrrelay

./: .gitattributes  .gitignore  Makefile  README.md  __init__.py  client_manager.py  config.json  crud.py  description.md  helpers.py  manifest.json  migrations.py  models.py  package-lock.json  package.json  pyproject.toml  tasks.py  views.py  views_api.py
.github/workflows/: ci.yml  release.yml
relay/: client_connection.py  client_manager.py  event.py  event_validator.py  filter.py  relay.py
static/components/: relay-details.js
static/components/relay-details/: relay-details.html  relay-details.js
static/js/: index.js  utils.js
templates/nostrrelay/: _api_docs.html  index.html  public.html  relay-details.html
tests/: conftest.py  helpers.py  test_clients.py  test_events.py  test_init.py  test_relay.py
tests/fixture/: clients.json  events.draft.json  events.json
